# squonk

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  license-header.toml  rust-toolchain.toml
bench/: .gitignore  Cargo.toml  README.md  build.rs  plot_performance.py  upstream-baseline.json
bench/benches/: adversarial_instr.rs  alloc_probe.rs  ast.rs  corpus_heap.rs  corpus_instr.rs  libpg_instr.rs  meta_probe.rs  perf.rs  publication.rs  upstream_instr.rs
bench/benches/adversarial/: mod.rs
bench/benches/corpus/: mod.rs
bench/benches/gungraun_gate/: mod.rs
bench/benches/interner_ref/: mod.rs
bench/benches/iterative_pratt_ref/: mod.rs
bench/benches/keyword_lookup_ref/: mod.rs
bench/benches/libpg/: mod.rs
bench/benches/logos_ref/: mod.rs
bench/benches/upstream/: mod.rs
bench/cross-language/: calcite_throughput.java  corpus_loader.mjs  corpus_loader.py  formatter_sketch.mjs  intersect_accepts.py  jsqlparser_throughput.java  package.json  sql_formatter_throughput.mjs  sqlglot_throughput.py  wasm_footprint.mjs
bench/examples/: adversarial_testbed.rs  arena_spike.rs  compare_adversarial.rs  compare_interner.rs  compare_keyword_lookup.rs  compare_libpg.rs  compare_tokenizer_logos.rs  compare_upstream.rs  iterative_pratt.rs  keyword_size_generated.rs  keyword_size_phf.rs  lexing_spike.rs  parallel_compare.rs  perf_testbed.rs  publication_adapter.rs  small_throughput.rs  variant_frequency.rs
bench/publication/: build_portable_corpus.py  node_adapter.mjs  package-lock.json  package.json  python_adapter.py  requirements.txt  run.py  run_on_builder.sh  test_publication.py
bench/publication/corpus/: PROVENANCE.toml  portable.json
bench/publication/results/: headline.json
bench/src/: adversarial.rs  compare.rs  lib.rs
bench/tests/: adversarial_recursion.rs  adversarial_scaling.rs  allocations.rs  corpus_allocations.rs  interner_reference.rs  iterative_pratt.rs  keyword_phf.rs  logos_reference.rs  main.rs  publication.rs  ratio_gate_logic.rs  render_allocations.rs  upstream_gate.rs
bench/tests/snapshots/: allocations__representative_blocks.snap  allocations__representative_bytes_aarch64.snap  corpus_allocations__corpus_aggregate_blocks.snap  corpus_allocations__corpus_aggregate_bytes_aarch64.snap
conformance/: Cargo.toml  README.md
conformance/corpus/duckdb/: PROVENANCE.toml  README.md  docs_examples.sql  extract.py  statements.sql  statements_with_schema.sql
conformance/corpus/duckdb-grammar-inventory/: PROVENANCE.toml  README.md  extract_stmt_productions.py  stmt-productions.txt
conformance/corpus/duckdb-testsuite/: PROVENANCE.toml  README.md  extract_core.py  rejects.sql  statements.sql  statements_with_schema.sql
conformance/corpus/duckdb-testsuite-tranche2/: PROVENANCE.toml  README.md  extract_tranche2.py  rejects.sql  statements.sql  statements_with_schema.sql
conformance/corpus/mysql/: PROVENANCE.toml  README.md  event_ddl.sql  families.sql  routine_bodies.sql
conformance/corpus/pg-regress/: PROVENANCE.toml  README.md  extract_pg_regress.py  extract_stmt_productions.py  statements.sql  stmt-productions.txt  stmt-productions.txt.license
conformance/corpus/postgres/: PROVENANCE.toml  README.md  regress-guide.sql  regress-supported.sql
conformance/corpus/quiltdb/: PROVENANCE.toml  integration-corpus.json  manifest.json  reject-corpus.json  slt-corpus.json
conformance/corpus/sqlglot/: PROVENANCE.toml  README.md  supported.sql
conformance/corpus/sqlglot-complex/: PROVENANCE.toml  README.md  eliminate_ctes.sql  merge_subqueries.sql  pushdown_cte_alias_columns.sql  tpc-ds.sql  tpc-h.sql  unnest_subqueries.sql
conformance/corpus/sqlite/: PROVENANCE.toml  README.md  features.sql
conformance/corpus/sqlite-testsuite/: PROVENANCE.toml  README.md  commands.txt  extract_cmd_productions.py  extract_tcl.py  rejects.sql  statements.sql  statements_with_schema.sql
conformance/corpus/sqllogictest/: LICENSE  PROVENANCE.toml  README.md  statements.sql  supported.sql
conformance/fuzz/: Cargo.toml  README.md
conformance/fuzz/fuzz_targets/: differential.rs  duckdb_differential_raw_bytes.rs  parse_no_panic.rs  pg_differential_raw_bytes.rs  recover_invariants.rs  roundtrip.rs  sqlite_differential_raw_bytes.rs
conformance/src/: bigquery.rs  bitwise.rs  canonical_shapes.rs  clickhouse.rs  corpus_complex.rs  corpus_duckdb_verdicts.rs  corpus_generated.rs  corpus_mysql_verdicts.rs  corpus_partition.rs  corpus_pg_verdicts.rs  corpus_roundtrip.rs  corpus_sqlglot.rs  corpus_sqlite_verdicts.rs  corpus_sqllogictest.rs  coverage.rs  doc_truth.rs  duckdb_ffi.rs  duckdb_structural.rs  fuzz.rs  goldens.rs  keyword_positions.rs  lib.rs  m2.rs  m3.rs  oracle.rs  pg.rs  properties.rs  publication_oracles.rs  quiltdb_contract.rs  recovery_invariants.rs  recursion.rs  redaction.rs  shape.rs  shared_interner.rs  spans.rs  spelling_fidelity.rs  sqlite_ffi.rs  support_tiers.rs  token_stream.rs  union_lenient.rs  (+1 more)
conformance/src/coverage/: cases.rs  harness.rs  labeled.rs  lattice.rs  matrix.rs
conformance/src/duckdb_structural/: tests.rs
conformance/src/fuzz/: builders.rs  pg_comparable.rs
conformance/src/pg/: protobuf_shape.rs  tests.rs
conformance/src/properties/: dialect_features.rs  generators.rs  normalize.rs  normalized.rs
conformance/src/snapshots/: squonk_conformance__goldens__tests__m1_select_debug_ast.snap  squonk_conformance__goldens__tests__m1_set_operation_debug_ast.snap
conformance/testdata/goldens/: m1  redacted  target-render  token-stream
crates/squonk/: Cargo.toml  README.md
crates/squonk-ast/: Cargo.toml  README.md
crates/squonk-ast/src/: lib.rs  serde_depth.rs
crates/squonk-ast/tests/: main.rs  serde_nodes.rs
crates/squonk-node/: Cargo.toml  build.rs
crates/squonk-node/src/: lib.rs
crates/squonk-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/squonk-sourcegen/: Cargo.toml
crates/squonk-wasm/: Cargo.toml  README.md  package.json  size-budget.json  tsconfig.json  tsconfig.type-tests.json
(+355 files in other folders)
